--- a/package.json
+++ b/package.json
@@ -30,14 +30,22 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.1.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/react-hooks": "^8.0.1",
+		"@testing-library/user-event": "^14.6.1",
+		"@types/jest": "^30.0.0",
+		"@types/mocha": "^10.0.10",
 		"@types/node": "^24.0.10",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
 		"@vitejs/plugin-react": "^4.6.0",
 		"globals": "^16.3.0",
+		"jsdom": "^26.1.0",
 		"tw-animate-css": "^1.3.5",
 		"typescript": "~5.8.3",
 		"typescript-eslint": "^8.35.1",
-		"vite": "^7.0.3"
+		"vite": "^7.0.3",
+		"vitest": "^3.2.4"
 	}
 }
